--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-color: rgba(23, 23, 23, 0.984);
+  
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +12,95 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.taskList {
+  font-size: small;
+  color: white;
+  background-color: #36393f;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  height: 60%;
+  margin: 0 auto;
+  border: 2px solid #040404;
+  padding: 10px;
+  border-radius: 3%;
+  margin-top: 5%;
+  box-shadow: 3px 3px 3px black;
+}
+
+.button {
+  
+  color: white;
+  background-color: rgb(59, 73, 98);
+  border: 2px solid #000000;
+  transition-duration: 0.5s;
+}
+
+.button:hover {
+  color: white;
+  background-color: rgb(10, 124, 231);
+}
+
+.clock{
+  width: 200px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: 20%;
+  margin-inline: 10%;
+  padding: 10px;
+}
+
+button.setting, button.pause, button.start {
+  background-color: transparent;
+  color: white;
+  border: 0;
+  display:flex;
+  width: 100px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+}
+
+button.with-text {
+  color: white;
+  width: auto;
+  background-color: #36393f;
+  border-radius:  5%;
+  padding: 10px 20px;
+  font-size: 1.4rem;
+  line-height: 36px;
+  box-shadow: 3px 3px 3px black;
+}
+button.with-text svg {
+  width: 36px;
+  float: left;
+  margin-left: 5px;
+}
+
+label{
+  display: block;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  text-transform: capitalize;
+}
+
+.settingsDiv {
+  border: 1px solid #000000;
+  color: white;
+  padding: 100px;
+  margin-inline: 10%;
+  margin-bottom: 10%;
+  background-color: #36393f;
+  border-radius: 10%;
+  box-shadow: 3px 3px 3px black;
 }
