--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Oswald', sans-serif;
   background-color: rgba(23, 23, 23, 0.984);
   
   margin: 0;
@@ -16,6 +17,7 @@ code {
 
 .taskList {
   font-size: small;
+  font-family: 'Oswald', sans-serif;
   color: white;
   background-color: #36393f;
   display: flex;
@@ -28,7 +30,8 @@ code {
   border: 2px solid #040404;
   padding: 10px;
   border-radius: 3%;
-  margin-top: 5%;
+  margin-top: 3%;
+  margin-bottom: 3%;
   box-shadow: 3px 3px 3px black;
 }
 
@@ -36,8 +39,9 @@ code {
   
   color: white;
   background-color: rgb(59, 73, 98);
-  border: 2px solid #000000;
+  border: 2px solid transparent;
   transition-duration: 0.5s;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -88,6 +92,7 @@ button.with-text svg {
 }
 
 label{
+  font-family: 'Oswald', sans-serif;
   display: block;
   margin-bottom: 10px;
   margin-top: 20px;
@@ -103,4 +108,51 @@ label{
   background-color: #36393f;
   border-radius: 10%;
   box-shadow: 3px 3px 3px black;
+}
+
+.container {
+  font-family: 'Oswald', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 40vh;
+}
+
+.inputs {
+  font-family: 'Oswald', sans-serif;
+}
+input[type=text]:focus {
+  border: 3px solid #555;
+}
+
+.title {
+  color: rgb(246, 246, 246);
+  border: solid 1px;
+  text-align: center;
+  background-color: #000000;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.titletext{
+  font-family: 'Oswald', sans-serif;
+  font-size: xx-large;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+.clockpart{
+  border: solid 1px transparent;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 7%;
+
+}
+
+.nav{
+  border: solid 15px transparent;
+  background-color: #000000;
+  color: white;
+  font-family: 'Oswald', sans-serif;
+  font-size: xx-large;
 }
