--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@ code {
 }
 
 .taskList {
-  font-size: small;
-  font-family: 'Oswald', sans-serif;
+  font-size: xx-small;
+  font-family: 'Michroma', sans-serif;
   color: white;
   background-color: #36393f;
   display: flex;
@@ -32,7 +32,6 @@ code {
   border-radius: 3%;
   margin-top: 3%;
   margin-bottom: 3%;
-  box-shadow: 3px 3px 3px black;
 }
 
 .button {
@@ -121,12 +120,14 @@ label{
 
 .inputs {
   font-family: 'Oswald', sans-serif;
+
 }
 input[type=text]:focus {
   border: 3px solid #555;
 }
 
 .title {
+  font-family: 'Oswald', sans-serif;
   color: rgb(246, 246, 246);
   border: solid 1px;
   text-align: center;
@@ -136,7 +137,7 @@ input[type=text]:focus {
 }
 
 .titletext{
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Michroma', sans-serif;
   font-size: xx-large;
   margin-top: 5%;
   margin-bottom: 5%;
@@ -153,6 +154,6 @@ input[type=text]:focus {
   border: solid 15px transparent;
   background-color: #000000;
   color: white;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Press Start 2P', cursive;
   font-size: xx-large;
 }
